force-app/main/default/objects/Webinar__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Webinars</relationshipLabel>
    <relationshipName>Webinar</relationshipName>
    <type>Lookup</type>
</CustomField>