force-app/main/default/objects/Webinar__c/fields/Related_Project__c.field-meta.xml
<CustomField>
    <fullName>Related_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Project</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Webinars</relationshipLabel>
    <relationshipName>Webinars</relationshipName>
    <type>Lookup</type>
</CustomField>