force-app/main/default/objects/Webinar__c/fields/Webinar_Category__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Category__c</fullName>
    <label>Webinar Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>