force-app/main/default/objects/Webinar__c/fields/Webinar_Description__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Description__c</fullName>
    <label>Webinar Description</label>
    <type>TextArea</type>
</CustomField>