force-app/main/default/objects/Webinar__c/fields/Webinar_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Ext_Id__c</fullName>
    <externalId>true</externalId>
    <label>Webinar Ext Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>