force-app/main/default/objects/Webinar__c/fields/Webinar_Link__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Link__c</fullName>
    <label>Webinar Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>