force-app/main/default/objects/Webinar__c/fields/Webinar_Machine__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Machine__c</fullName>
    <label>Webinar Machine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>