force-app/main/default/objects/Webinar__c/fields/Webinar_Thumbnail_Url__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Thumbnail_Url__c</fullName>
    <label>Webinar Thumbnail Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>